# itmo

./: README.md
sem2/proga/lab5/src/: HandlerJSON.java  Main.java  Person.java
sem2/proga/lab5/src/PersonFeatures/: Color.java  Coordinates.java  Country.java  Location.java
sem2/proga/lab5/src/commands/: Add.java  AddIfMax.java  AddIfMin.java  AverageOfHeight.java  Clear.java  Command.java  ExecuteScript.java  Exit.java  Help.java  Info.java  Invoker.java  MinByLocatioin.java  PrintUniqueHairColor.java  RemoveById.java  RemoveGreater.java  Save.java  Show.java  Update.java
sem2/proga/lab7/client_program/: client.bat
sem2/proga/lab8/client_program/: client.bat  script  script_short
sem3/lab1/: file.html  index.php  styles.css
sem3/lab1/scripts/: validation.js
sem3/programming_languages/lab3/: CMakeLists.txt  main.c  rotate_full.c
sem3/programming_languages/lab3_test/: CMakeLists.txt
sem3/programming_languages/lab3_test/include/: bmp.h  console_io.h  enums.h  file_io.h  image.h  rotation.h  serialization.h
sem3/programming_languages/lab3_test/src/: console_io.c  enum_naming.c  file_io.c  main.c  rotation.c  serialization.c  util.c
sem3/web/lab1/: index.php
sem3/web/lab1/scripts/: canvas.js
sem3/web/lab3/: .classpath  .project  pom.xml
sem3/web/lab4/lab4_final/: package.json
sem3/web/lab4/spring-boot/: pom.xml
sem4/computational_maths/lab1/: file.in  file1.in  file2.in  file4.in  main.cpp  pubspec.yaml
sem4/computational_maths/lab1/resources/: test1.in
sem4/computational_maths/lab2/calculations/: pubspec.yaml
(+195 files in other folders)
